# SimDE

./: CMakeLists.txt  README.md
.github/workflows/: c-cpp.yaml  deploy_docs.yaml  format.yaml  test_docs.yaml
attic/: transformed.cpp
attic/include/property_types/: canonical_orbitals.hpp  correlation_energy.hpp  doubles_amplitudes.hpp  scf_iteration.hpp  transformed.hpp  update_guess.hpp  update_mos.hpp
attic/src/property_types/: correlation_energy.cpp  scf_iteration.cpp  update_guess.cpp  update_mos.cpp
attic/tests/: correlation_energy.cpp  scf_iteration.cpp  update_mos.cpp
attic/tests/ao_integrals/: ao_integrals_test.hpp  core_hamiltonian.cpp  coulomb_matrix.cpp  df_coefficients.cpp  doi.cpp  electron_repulsion.cpp  emultipole.cpp  exchange_matrix.cpp  fock_matrix.cpp  kinetic.cpp  nuclear.cpp  overlap.cpp  stg.cpp  type_traits.cpp  xc_quantities.cpp  yukawa.cpp
attic/tests/examples/: energy.cpp
attic/tests/linear_algebra/: eigen_solver.cpp  hermitian_triangular_factorization.cpp  linear_solver.cpp  lu.cpp  matrix_inverse.cpp  positive_definite_triangular_factorization.cpp  qr.cpp  (+1 more)
docs/: Makefile  README.md
docs/source/: conf.py  design_notes.rst  index.rst  structure.rst
include/simde/: atom_to_ao.hpp  atomic_charges.hpp  cauchy_schwarz_approximation.hpp  connectivity.hpp  doubles_residual.hpp  embedding_partition.hpp  energy_denominator.hpp  exchange_correlation.hpp  fragmented.hpp  mo_charges.hpp  simde.hpp  sparsity_relation.hpp  topology.hpp  types.hpp
src/simde/: embedding_partition.cpp  mo_charges.cpp
tests/: README.md
tests/simde/: atom_to_ao.cpp  atomic_charges.cpp  cauchy_schwarz_approximation.cpp  connectivity.cpp  embedding_partition.cpp  fragmented.cpp  mo_charges.cpp  test_property_type.hpp  topology.cpp
(+122 files in other folders)
